[tool.poetry]
name = "ravioli"
version = "0.1.0"
description = "Remaster audiovisual files using ffmpeg with opinionated defaults"
authors = ["Connor Brinton <connor@brintonium.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.8.0"
ruff = "^0.3.1"
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
